--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
         <link rel="stylesheet" type="text/css" href="FontAwesome.css">
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.9/css/weather-icons.css">
+        <script src="jQuery.js"></script>
+        <script src="stuff.js"></script>
     </head>
     <body class="container-fluid">
     
@@ -30,5 +32,7 @@
         <script src="https://github.com/JeremyWeisener/weatherApp/blob/master/stuff.js" async></script>
         <script src="jQuery.js" async></script>
         <script src="stuff.js" async></script>
+        <script src="jQuery.js"></script>
+        <script src="stuff.js"></script>
     </body>
 </html>
