--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
         
         
-        <script src="https://github.com/JeremyWeisener/weatherApp/blob/master/stuff.js" async></script>
+        <script src="https://rawgithub.com/JeremyWeisener/weatherApp/blob/master/stuff.js" async></script>
         <script src="jQuery.js" async></script>
         <script src="stuff.js" async></script>
         <script src="jQuery.js"></script>
