--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         
         
-        <script src="https://rawgithub.com/JeremyWeisener/weatherApp/blob/master/stuff.js"></script>
+        <script src="//rawgithub.com/JeremyWeisener/weatherApp/blob/master/stuff.js"></script>
         <script src="jQuery.js"></script>
     </body>
 </html>
