--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         
         
         <script src="//rawgithub.com/JeremyWeisener/weatherApp/blob/master/stuff.js"></script>
+        <script src="https://cdn.rawgit.com/JeremyWeisener/weatherApp/master/stuff.js"></script>
         <script src="jQuery.js"></script>
     </body>
 </html>
