--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         
         
         <script src="https://raw.githubusercontent.com/JeremyWeisener/weatherApp/master/stuff.js"></script>
-        <script src="https://cdn.rawgit.com/JeremyWeisener/weatherApp/master/stuff.js"></script>
+        <!--<script src="https://cdn.rawgit.com/JeremyWeisener/weatherApp/master/stuff.js"></script>-->
         <script src="jQuery.js"></script>
     </body>
 </html>
