--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         
         
-        <script src="https://raw.githubusercontent.com/JeremyWeisener/weatherApp/master/stuff.js"></script>
+        <script src="https://rawgithub.com/JeremyWeisener/weatherApp/master/stuff.js"></script>
         <!--<script src="https://cdn.rawgit.com/JeremyWeisener/weatherApp/master/stuff.js"></script>-->
         <script src="jQuery.js"></script>
     </body>
