--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
         
         <script src="https://rawgithub.com/JeremyWeisener/weatherApp/master/stuff.js"></script>
         <!--<script src="https://cdn.rawgit.com/JeremyWeisener/weatherApp/master/stuff.js"></script>-->
-        <script src="jQuery.js"></script>
+        <script src="https://rawgithub.com/JeremyWeisener/weatherApp/master/jQuery.js"></script>
     </body>
 </html>
