--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
             
         </div>
-        
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
         <script src="https://rawgithub.com/JeremyWeisener/weatherApp/master/jQuery.js"></script>
         <script src="https://rawgithub.com/JeremyWeisener/weatherApp/master/stuff.js"></script>
         <!--<script src="https://cdn.rawgit.com/JeremyWeisener/weatherApp/master/stuff.js"></script>-->
